Privacy policy English version

--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
 
         <p>Esta política de privacidad se refiere sólo a esta aplicación, a menos que se indique lo contrario en el presente documento.</p>
 
+        <h6>Última actualización: Mayo 08 de 2024</h6>
+
     </section>
 </main>
 
