Remove unnecessary comma

--- a/index.en.html
+++ b/index.en.html
@@ -71,7 +71,7 @@
 
         <h4>Purpose of processing the collected data</h4>
 
-        <p>"The user's data is collected to allow the data controller to provide its service, fulfill its legal obligations, respond to enforcement requests, protect its rights and interests (or those of its users or third parties), detect any malicious or fraudulent activity, as well as for the following purposes: Registration and authentication, Contact management and message sending, and Performance testing of content and functionalities (A/B testing).<br><br>
+        <p>The user's data is collected to allow the data controller to provide its service, fulfill its legal obligations, respond to enforcement requests, protect its rights and interests (or those of its users or third parties), detect any malicious or fraudulent activity, as well as for the following purposes: Registration and authentication, Contact management and message sending, and Performance testing of content and functionalities (A/B testing).<br><br>
             Users can find specific information about the personal data used for each purpose in the section 'Detailed Information on the Processing of Personal Data'.</p>
 
         <h4>Detailed Information on the Processing of Personal Data</h4>
