--- a/pages/privacypolicy.html
+++ b/pages/privacypolicy.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Manager</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="assets/carmanager.png">
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="icon" href="../assets/carmanager.png">
 </head>
 <body>
 <header>
     <h1>Privacy Policy</h1>
-    <img src="assets/carmanager.png" alt="Car Manager logo">
+    <img src="../assets/carmanager.png" alt="Car Manager logo">
 </header>
 
 <main>
