Change assets path

--- a/pages/es/privacypolicy.html
+++ b/pages/es/privacypolicy.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Car Manager</title>
-    <link rel="stylesheet" href="../styles/style.css">
-    <link rel="icon" href="../assets/carmanager.png">
+    <link rel="stylesheet" href="../../styles/style.css">
+    <link rel="icon" href="../../assets/carmanager.png">
 </head>
 
 <body>
     <header>
         <h1>Política de privacidad</h1>
-        <img src="../assets/carmanager.png" alt="Car Manager logo">
+        <img src="../../assets/carmanager.png" alt="Car Manager logo">
     </header>
 
     <main>
